python-test_driven_development/tests/0-add_integer.txt
the "0-add_integer" module

>>> add_integer = __import__('0-add_integer').add_integer

>>> add_integer(hola)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hola' is not defined

>>> add_integer()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: add_integer() missing 1 required positional argument: 'a'

>>> add_integer(02)
  File "<stdin>", line 1
    add_integer(02)
                ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers

>>> add_integer(420)
518

>>> add_integer(33,21)
54

add_integer(NaN)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'NaN' is not defined

add_integer(toti $$$)
  File "<stdin>", line 1
    add_integer(toti $$$)

>>> add_integer(-2, 100)
98

>>> add_integer(-2, hello)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hello' is not defined. Did you mean: 'help'?

>>> add_integer(hola, hello)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hola' is not defined